--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/ui": "^0.3",
+        "auto": "^10.30.0",
+        "autoprefixer": "^9.6",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.27",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.3.6",
+        "postcss-import": "^12.0",
+        "postcss-nested": "^4.2",
+        "prefixer": "0.0.3",
+        "tailwindcss": "^2.2.7",
+        "vue-template-compiler": "^2.6.11"
     }
 }
